syntax = "proto3";

package item;

option go_package = "./pb;pb";

import "order.proto";

service ItemService {
  rpc FindOne (ItemById) returns (Item) {}
  rpc FindOneWithOrder (ItemById) returns (ItemWithOrderInfo) {}
}

message ItemById {
  int32 id = 1;
}

message Item {
  int32 id = 1;
  string name = 2;
}

message ItemWithOrderInfo {
  int32 id = 1;
  string name = 2;
  order.Order order = 3;
}